<resources>
    <string name="app_name">MorseMaster</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionMark">\?</string>
    <string name="repeat">Question repeat</string>
    <string name="max_char">Max number of characters</string>
    <string name="level">Difficulty level (%)</string>
    <string name="answer_timeout">Answer time</string>
    <string name="speed">Play speed</string>
    <string name="lesson">Lesson</string>
    <string name="morse_master">Morse Master</string>
    <string name="run">Run</string>
    <string name="clear_statistic">Clear statistic</string>
    <string name="switch_flash_text">flash</string>
    <string name="switch_sound_text">sound</string>
    <string name="background_message">background message</string>
    <string name="foreground_message">foregraund message</string>
    <string name="lesson_disc"> <b> Koch method </b> now regarded as the <b>fastest route</b> to morse code proficiency. \n
        The philosophy of the method is simple: You do not learn morse the same way you study and learn other subjects. \n
        Morse code is the translation between a stimulus (sound in our case) into a reaction (writing down the letter). \n
        Learning morse code is not a particularly conscious process, it is more like developing <b>reflexes</b>. \n
        Start off with two characters sent at <b>full speed</b> (first lesson). \n
        Write down each character as you identify it. Do this during a five minute session. \n
        If you have jotted down the characters with at least 90 percent success rate then will be added one more char. \n
        Do this until all characters have been processed. \n
        <b>That’s all there is!</b>

</string>
    <string name="speed_disc">Select speed for the question\'s sound</string>
    <string name="level_disc">Percent of the correct answers when begin show complex questions</string>
    <string name="answer_disc">Time for answer on simple question</string>
    <string name="maxchar_disc">Maximum lenght of difficult question</string>
    <string name="repeat_disc">Select how many times will be repeat each question</string>

    <string-array name="lesson_array">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
    </string-array>
    <string-array name="speed_array">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
    </string-array>

    <string-array name="answer_timeout_array">
        <item>Forever</item>
        <item>1 sec</item>
        <item>2 sec</item>
        <item>3 sec</item>
    </string-array>
    <string-array name="level_array">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
    </string-array>
    <string-array name="max_char_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="repeat_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>